donor feature updated